fixed stly naming on form submit button to ensure text is visible to read

--- a/frontend/fanatii-football-x/src/Components/Admin_Writer/AdminStatsModal/StatsModal.css
+++ b/frontend/fanatii-football-x/src/Components/Admin_Writer/AdminStatsModal/StatsModal.css
@@ -62,7 +62,7 @@
     font-weight: 500;
 }
 
-#player-submit{
+#playerSubmit{
     color: #000;
     background: #fff;
     font-weight: bolder;
